syntax = "proto3";

option csharp_namespace = "FastReportApp";

package greet;


service report {
  // Sends a greeting
  rpc GetReport (GetReportRequest) returns (GetReportResponse);
}

message GetReportRequest {
  string frx_content = 1;
  string frx_data = 2;
  string output_filename = 3;
}

message GetReportResponse {
  bytes data = 1;
}
